nuevas dos secciones

--- a/servicios.html
+++ b/servicios.html
@@ -32,16 +32,16 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-center mb-2 mb-lg-0">
-                  <li class="nav-item ps-0" id="nav-click">
-                    <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
-                  </li>
                   <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+                  </li>
+                  <li class="nav-item ps-0 id="nav-click">
                     <a class="nav-link" href="nosotros.html">NOSOTROS</a></li>
                   <li class="nav-item">
-                    <a class="nav-link" href="servicios.html">SERVICIOS</a>
+                    <a class="nav-link active" href="servicios.html">SERVICIOS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACTANOS</a>
+                    <a class="nav-link" href="contacto.html">CONTACTANOS</a>
                   </li>
                 </ul>
                 </form>
@@ -51,41 +51,29 @@
     </header>
 
     <main class="holder">
-      
-      <div class="contenedor-carousel">
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="carousel/1.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="carousel/2.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+
+      <div class="container text-center p-5" id="cajas-servicios">
+        <div class="column gy-5" id="services">
+          <div class="col p-4">
+            <img src="img/placeholder-180x100.png" class="img-left" alt="">
+            <h4>Movimiento de Suelos</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat sem id erat lacinia lacinia eget ac neque.</p></div>
+          <div class="col p-4">
+            <img src="img/placeholder-180x100.png" class="img-right" alt="">
+            <h4>Pavimentación y asfaltado</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat sem id erat lacinia lacinia eget ac neque.</p></div>
+          <div class="col p-4">
+            <img src="img/placeholder-180x100.png" class="img-left" alt="">
+            <h4>Canchas de polo</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat sem id erat lacinia lacinia eget ac neque.</p></div>
+          <div class="col p-4">
+            <img src="img/placeholder-180x100.png" class="img-right" alt="">
+            <h4>Canchas de fútbol</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce feugiat sem id erat lacinia lacinia eget ac neque.</p></div>
         </div>
       </div>
-    </main>
 
-    <div class="container" id="welcomeBox">
-      <h2><b>¡Bienvenidos!</b></h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus efficitur felis, eget feugiat nibh vehicula nec. Sed egestas, purus nec pretium suscipit, enim erat aliquam tortor, eu venenatis velit sapien nec turpis. Vivamus diam erat, porta non placerat rhoncus, consequat et quam. Praesent ultricies maximus elit at laoreet. Morbi vel justo ligula. Aenean porttitor laoreet dui, id mollis ipsum. Aliquam aliquet justo urna, ac lacinia enim efficitur ac. Sed ultricies vitae elit id commodo. Fusce convallis facilisis orci et egestas. Curabitur ultrices suscipit neque, id scelerisque lacus vehicula nec. Cras maximus mollis nisl, accumsan sodales turpis malesuada eu.</p>
-     </div>
+    </main>
 
     <footer>Diseñado por Melissa Alarcón - &copy;2023</footer>
 
