--- a/nosotros.html
+++ b/nosotros.html
@@ -33,12 +33,12 @@
               <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-content-center mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link" aria-current="page" href="index.html">HOME</a>
                   </li>
                   <li class="nav-item ps-0 id="nav-click">
-                    <a class="nav-link active" href="#">NOSOTROS</a></li>
+                    <a class="nav-link active" href="nosotros.html">NOSOTROS</a></li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">SERVICIOS</a>
+                    <a class="nav-link" href="servicios.html">SERVICIOS</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">CONTACTANOS</a>
@@ -53,6 +53,7 @@
     <main class="holder">
 
       <div class="container text-center">
+        <h2>Lo que brindamos...</h2>
         <div class="row">
           <div class="staff">
               <img src="img/placeholder.png" id="staff-img" alt="">
