modificaciones a contacto y servicios

--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
               </div>
               <div class="col-md-4">
                 <label for="inputPassword4" class="form-label">Número de teléfono</label>
-                <input type="password" class="form-control" id="inputNumber4">
+                <input type="password" class="form-control" id="inputNumber4" placeholder="+ Código de área">
               </div>
               <div class="col-md-4">
                 <label for="inputState" class="form-label">Localidad</label>
